feat: 기본 시나리오 테스트 코드 수정 및 추가

--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,7 @@ ext {
 }
 
 dependencies {
+    implementation 'io.reactivex.rxjava3:rxjava:3.1.6'
     implementation "org.web3j:core:$web3jVersion",
             "ch.qos.logback:logback-core:$logbackVersion",
             "ch.qos.logback:logback-classic:$logbackVersion",
